app-frontend/kubernets/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "frontend-namespace"
  labels:
    name: "frontend-namespace"
