app-frontend/kubernets/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: "frontend-namespace"
  labels:
    app: frontend-label
    app.kubernetes.io/name: frontend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-label
  template:
    metadata:
      labels:
        app: frontend-label
    spec:
      containers:
      - name: frontend-app
        image: williansmartins/app-frontend:v1
        ports:
          - containerPort: 80
  strategy:
    type: RollingUpdate
