app-frontend/kubernets/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: "frontend-namespace"
  labels:
    app: frontend-label
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80 #porta externa
    targetPort: 80 #porta interna 
    nodePort: 30000 #porta externa do cluster
